Removed article opacity to prevent sidebar from being visible behind

--- a/themes/pelican-svbtle/static/css/style.css
+++ b/themes/pelican-svbtle/static/css/style.css
@@ -48,7 +48,7 @@ section#posts a.button_accent:link{color:#0e94ec}
 section#posts a.button_accent:hover{color:#fff;background-color:#0e94ec;outline:0}
 section#posts a.button_accent:active{color:#fff;background-color:#0e94ec;outline:0}
 section#posts p.paginator{margin:0;padding:0;min-height:122px;width:100%;border-top:#eee 1px solid}
-section#posts article{margin:0;padding:40px 40px 15px 50px;position:relative;font-size:15px;line-height:normal; overflow-x:hidden; overflow-y:hidden; width:760px}
+section#posts article{margin:0;padding:40px 40px 15px 50px;position:relative;font-size:15px;line-height:normal; overflow-x:hidden; overflow-y:hidden; width:760px; opacity: 1; background-color: #FFFFFF;}
 section#posts article #title{font-family:'Freight-Sans-Pro','Proxima Nova','Open Sans','Lato',sans-serif;margin:45px 0 0;padding:0;color:#000}
 section#posts article #title a{border:none; font-weight: 100; font-size: 30px;}
 section#posts article #article_meta{margin:20px 0 0 0;padding:0;font-size:13px;line-height:16px}
